web/wp-content/themes/cncf-twenty-two/source/scss/components/_front-page.scss
/* ... */
.home-projects > .wp-block-group {
	padding-top: 80px;
	padding-bottom: 40px;
	@media (min-width: 800px) {
		padding-top: 100px;
		padding-bottom: 100px;
	}
	@media (min-width: 1200px) {
		padding-top: 140px;
		padding-bottom: 140px;
	}
}

.home-projects-intro {
	text-align: center;
	margin-bottom: 40px;
	@media (min-width: 1000px) {
		margin-bottom: 80px;
	}
	@media (min-width: 782px) {
		text-align: left;
	}
	&__col1 {
		grid-column: span 12;
		@media (min-width: 1000px) {
			grid-column: span 7;
		}
	}
	&__col2 {
		grid-column: span 12;
		@media (min-width: 1000px) {
			grid-column: span 5;
			align-self: end;
		}
	}
}

.home-projects-numbers {
	display: grid;
	grid-template-columns: 1fr 1fr 1fr;
	column-gap: 10px;
	text-align: center;
	@media (min-width: 782px) {
		text-align: left;
	}
	&__graduated,
	&__incubating,
	&__sandbox {
		a {
			display: flex;
			flex-direction: column;
			@media (min-width: 782px) {
				flex-direction: row;
				align-items: center;
			}
		}
	}
	.number {
		font-weight: 700;
		margin-bottom: 5px;
		font-size: 34px;
		line-height: 34px;
		@media (min-width: 782px) {
			font-size: 44px;
			line-height: 44px;
			width: 65px;
			text-align: left;
		}
		@media (min-width: 1000px) {
			margin-bottom: 0px;
			font-size: 60px;
			line-height: 100%;
			width: 90px;
		}
	}
	.project {
		font-size: 13px;
		line-height: 125%;
		text-transform: uppercase;
		font-weight: 400;
		@media (min-width: 782px) {
			margin-left: min(4%, 20px);
			line-height: 140%;
		}
		@media (min-width: 1000px) {
			margin-left: 7px;
			font-size: 20px;
			line-height: 125%;
		}
	}
	a {
		color: $black;
		&:hover {
			text-decoration: none;
			color: $gray-900;
		}
	}
}

.home-projects-slider {
	position: relative;
	margin-top: 40px;
	@media (min-width: 782px) {
		margin-top: 80px;
	}
	.slick-initialized .slick-track {
		display: flex;

		.slick-slide {
			display: flex;
			height: auto;
			justify-content: center;
		}
	}

	.slick-slide {
		background: $white;
		filter: drop-shadow(0px 1.56476px 3.9119px rgba(0, 0, 0, 0.05));
		border: 1px solid rgba($gray-300, 0.1);
		border-radius: 5px;
		margin-right: 15px;
		margin-bottom: 15px;
		@media (min-width: 782px) {
			margin-right: 35px;
			margin-bottom: 35px;
		}
		padding: 15px;
		display: flex;
		align-content: center;
		align-items: center;
		justify-content: flex-start;

		img {
			width: 45px;
			height: 45px;
			@media (min-width: 782px) {
				width: 65px;
				height: 65px;
			}
		}

		&:hover,
		&:focus,
		&:active {
			border: 1px solid rgba($gray-300, 0.3);
			animation-name: pop-sm;
			animation-duration: 0.3s;
			animation-timing-function: linear;
			animation-iteration-count: 1;
			@media (prefers-reduced-motion: reduce) {
				animation-name: none;
				animation-duration: 0;
			}
		}
	}
}

.slider {
	opacity: 0;
}

.slider.slick-initialized {
	opacity: 1;
	transition: opacity 0.3s ease-out;
}

.slick-slider {
	margin: 0;
	min-height: 1px;
	min-width: 1px;
}

.home-intro-boxes {
	@media (min-width: 1000px) {
		grid-row-gap: 70px;
	}
}

.home-intro-box {
	background: $gray-050;
	filter: drop-shadow (0px 2px 5px rgba(0, 0, 0, 0.1));
	border: 1px solid $gray-300;
	border-radius: 5px;
	letter-spacing: 0.02em;
	line-height: 150%;
	height: 100%;
	display: flex;
	flex-direction: column;
	&__title {
		font-size: 26px;
		border-top-left-radius: 5px;
		border-top-right-radius: 5px;
		padding: 15px 20px 15px 20px;
		@media (min-width: 800px) {
			font-size: 30px;
			padding: 11px 20px 7px 25px;
		}
	}
	&:nth-child(1) {
		.home-intro-box__title {
			background-color: $shade-06;
		}
	}
	&:nth-child(2) {
		.home-intro-box__title {
			background-color: $shade-07;
		}
	}
	&:nth-child(3) {
		.home-intro-box__title {
			background-color: $shade-08;
		}
	}
	&:nth-child(4) {
		position: relative;
		@media (min-width: 1000px) {
			grid-column: span 3;
		}
		.home-intro-box__title {
			background-color: $shade-09;
			@media (min-width: 1000px) {
				background-color: transparent;
				padding: 22px 0px 22px 0px;
				text-align: center;
			}
		}
		.home-intro-box__text-wrapper {
			@media (min-width: 1000px) {
				padding: 0;
			}
		}
		.is-style-link-cta {
			margin-top: 0px;
			@media (min-width: 710px) {
				margin-top: auto;
			}
			@media (min-width: 1000px) {
				position: absolute;
				right: 5%;
				top: 50%;
				transform: translateY(-100%);
			}
			@media (min-width: 1200px) {
				right: 9%;
			}
		}
	}
	&__goldie {
		@media (max-width: 709px) {
			position: absolute;
			max-height: 80px;
			height: auto;
			bottom: 25px; // match padding.
			right: 12px;
			z-index: 1;
			@media (min-width: 420px) {
				max-height: 90px;
			}
			@media (min-width: 500px) {
				max-height: 110px;
				right: 50px;
			}
		}
		@media (min-width: 710px) {
			max-height: 110px;
			align-self: flex-start;
			padding-top: 16px;
			padding-left: 20px;
		}
		@media (min-width: 1000px) {
			padding: 0; // reset.
			position: absolute;
			right: 19%;
			top: -10px;
			bottom: -10px;
		}
		@media (min-width: 1200px) {
			max-height: 118px;
			right: 22%;
			top: -20px;
			bottom: -20px;
		}
	}
	&__text-wrapper {
		padding: 20px 20px 25px 20px;
		height: 100%;
		@media (min-width: 710px) {
			display: flex;
			flex-direction: column;
			padding: 22px 20px 28px 25px;
		}
	}
	&__text {
		@media (min-width: 710px) {
			font-size: 16px;
			line-height: 150%;
			letter-spacing: 0.02em;
			margin-bottom: 35px;
		}
	}
	.is-style-link-cta {
		font-size: 16px;
		margin-top: 24px;
		@media (min-width: 710px) {
			margin-top: auto;
			align-self: flex-start;
		}
	}
	p + p {
		margin-top: 12px;
	}
}
/* ... */

